k8s/uptime-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-ingress
  namespace: uptime-monitor
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"

spec:
  ingressClassName: nginx

  rules:
  - host: uptime.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: uptime-monitor
            port:
              number: 80
